Refatorando as funções de autenticação